# tree-sitter-fluent

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: messages.txt
src/: grammar.json  node-types.json  parser.c  scanner.c
